yaml-templates/sactive-mattermost-with-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-svc
  namespace: core
spec:
  type: NodePort
  ports:
  - name: mm-server
    port: 8065
    targetPort: 8065
    nodePort: 8065
  selector:
    app: mattermost

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mattermost-deployment
  namespace: core
  labels:
    app: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
    spec:
      nodeSelector:
        master: "true"
      containers:
      - name: mattermost
        image: {IMAGE_REPOSITORY}
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: mm-etc
          mountPath: /etc/opt/certs
        - name: mm-config
          mountPath: /mattermost/config
      volumes:
      - name: mm-etc
        hostPath:
          path: {CERT_PATH}
      - name: mm-config
        hostPath:
          path: {CONFIG_FILE_PATH}
