yaml-templates/sactive-sbot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sbot-ingress-ssl
  namespace: {SUITE_NAMESPACE}
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/proxy-body-size: 60m
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: {EXTERNAL_ACCESS_HOST}
    http:
      paths:
      - backend:
          serviceName: sbot-svc
          servicePort: 3000
        path: /sbot/{CHAT_PLATFORM_OPTION}/{HUBOT_NAME}
      - backend:
          serviceName: sbot-svc
          servicePort: 3000
        path: /sbot/urest/v1/{CHAT_PLATFORM_OPTION}/{HUBOT_NAME}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sbot-ingress
  namespace: {SUITE_NAMESPACE}
spec:
  rules:
  - host: {EXTERNAL_ACCESS_HOST}
    http:
      paths:
      # only msteams used, other platform can ingore it
      - backend:
          serviceName: sbot-svc
          servicePort: 8080
        path: /sbot/v1/{CHAT_PLATFORM_OPTION}/{HUBOT_NAME}
      # only slack used, other platform can ingore it
      - backend:
          serviceName: sbot-svc
          servicePort: 4000
        path: /sbot/authentication/{CHAT_PLATFORM_OPTION}/{HUBOT_NAME}
